# Text_Fantasy

./: CMakeLists.txt  README.md
.cache/clangd/index/: game.cpp.8197F7A5693F69DA.idx  game.h.B00A7DC4472A5C66.idx  main.cpp.397A5484C3CEABCC.idx
include/: Character.h  Common.h  Monster.h  Player_Entity.h  Types.h  game.h
src/: Character.cpp  Player_Entity.cpp  README.md  game.cpp  main.cpp  run.sh
